@@ -222,7 +222,7 @@ namespace SimpleInjector
 
             if (!producerIsValid && throwOnFailure)
             {
-                this.ThrowMissingInstanceProducerException(serviceType);
+                this.ThrowInvalidRegistrationException(serviceType, producer);
             }
 
             // Prevent returning invalid producers
@@ -363,6 +363,18 @@ namespace SimpleInjector
             // creating an instance, could make us loose all registrations that are done by GetInstance. This
             // will not have any functional effects, but can result in a performance penalty.
             return instanceProducer.GetInstance();
+        }
+
+        private void ThrowInvalidRegistrationException(Type serviceType, InstanceProducer producer)
+        {
+            if (producer != null)
+            {
+                throw producer.Exception;
+            }
+            else
+            {
+                this.ThrowMissingInstanceProducerException(serviceType);
+            }
         }
 
         private void ThrowMissingInstanceProducerException(Type serviceType)
